Fixed bug: legend stuck in top left corner for water level map.

--- a/src/index.scss
+++ b/src/index.scss
@@ -183,13 +183,13 @@ nav.navbar {
   padding: 10px;
   display: flex;
   width: 130px;
-  margin-top: -5px;
+  // margin-top: -5px;
 }
 
 .legend-dropdown {
-  position: absolute;
-  left: 10px;
-  top: 10px;
+  // position: absolute;
+  left: 50px;
+  top: 40px;
   z-index: 1;
   margin-right: 10px;
   display: flex;
